--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Git adventure</title>
+    <title>Dowolny inny</title>
 </head>
 <body>
 
